--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -348,23 +348,52 @@
                           onclick="showModal('Cause 11 (Penyebab 11)','Kualitas radio buruk/crosstalk atau noise sehingga pesan terpotong/tertukar.')"
                         >
                           C 11
-                        </div><ul>
-                          <li><div class="node green" onclick="showModal('awik','isi')">
-                            PM 11
-                          </div>
-                          </li>
-                        </ul>
-                      <li><div class="node red" onclick="showModal('awikwok','isi')">
-                        C 12
                         </div>
                         <ul>
-                          <li><div class="node green" onclick="showModal('awikwok','isi')">
-                            PM 12</div></li>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('awik','isi')"
+                            >
+                              PM 11
+                            </div>
+                          </li>
                         </ul>
                       </li>
-                      <li><div class="node red" onclick="showModal('apa','isi')">
-                        C 13
-                      </div><ul><li><div class="node green" onclick="showModal('awokwko','isi')">PM 13</div></li></ul></li>
+
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('awikwok','isi')"
+                        >
+                          C 12
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('awikwok','isi')"
+                            >
+                              PM 12
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <div class="node red" onclick="showModal('apa','isi')">
+                          C 13
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('awokwko','isi')"
+                            >
+                              PM 13
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
                     </ul>
                   </li>
 
@@ -395,8 +424,23 @@
                           </li>
                         </ul>
                       </li>
-                      <li><div class="node red" onclick="showModal('apa gitu','isi')">C 15</div>
-                      <ul><li><div class="node green" onclick="showModal('apa juduul','isi')">PM 15</div></li></ul>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('apa gitu','isi')"
+                        >
+                          C 15
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('apa juduul','isi')"
+                            >
+                              PM 15
+                            </div>
+                          </li>
+                        </ul>
                       </li>
                     </ul>
                   </li>
@@ -417,25 +461,90 @@
               <li>
                 <div
                   class="node purple"
-                  onclick="showModal('AP 4','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio).')">
+                  onclick="showModal('AP 4','Validasi perangkat & dokumen kerja sebelum mulai (device & validasi tools kerja; CWP/PA/Radio).')"
+                >
                   AP 4
                 </div>
-                <ul><li><div class="node yellow" onclick="showModal('isi r8','')">
-                  R 8</div>
-                  <ul>
-                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 15</div><ul>
-                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 15</div></li>
-                    </ul></li>
-                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 16</div><ul>
-                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 16</div></li>
-                    </ul></li>
-                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 17</div><ul>
-                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 17</div></li>
-                    </ul></li>
-                    <li><div class="node red" onclick="showModal('apa gitu','isi')">C 18</div><ul>
-                      <li><div class="node green" onclick="showModal('apa gitu','isi')">PM 18</div></li>
-                    </ul></li>
-                  </ul>
+                <ul>
+                  <li>
+                    <div class="node yellow" onclick="showModal('isi r8','')">
+                      R 8
+                    </div>
+                    <ul>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('apa gitu','isi')"
+                        >
+                          C 15
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('apa gitu','isi')"
+                            >
+                              PM 15
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('apa gitu','isi')"
+                        >
+                          C 16
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('apa gitu','isi')"
+                            >
+                              PM 16
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('apa gitu','isi')"
+                        >
+                          C 17
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('apa gitu','isi')"
+                            >
+                              PM 17
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <div
+                          class="node red"
+                          onclick="showModal('apa gitu','isi')"
+                        >
+                          C 18
+                        </div>
+                        <ul>
+                          <li>
+                            <div
+                              class="node green"
+                              onclick="showModal('apa gitu','isi')"
+                            >
+                              PM 18
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -488,52 +597,201 @@
             <td>AT 4</td>
             <td>Yard Planner</td>
             <td>AA 4</td>
-            <td>Menyusun yard plan</td>
+            <td>
+              Menerbitkan Position Assignment/Stack Map final (inbound &
+              outbound)
+            </td>
             <td>R7</td>
-            <td>Penumpukan tidak efisien</td>
-            <td>C13</td>
-            <td>Yard occupancy tidak real-time</td>
-            <td>PM13</td>
-            <td>Yard monitoring + occupancy mapping</td>
+            <td>
+              Penempatan/slotting yard tidak efisien jadi re-handle & alat
+              banyak jalan
+            </td>
+            <td>C11</td>
+            <td>
+              Stack map tidak pakai urutan pengambilan (delivery sequence/dwell
+              time/priority tidak dipertimbangkan)
+            </td>
+            <td>PM11</td>
+            <td>
+              Lakukan slotting berbasis sequence & dwell time untuk meminimalkan
+              re-handle
+            </td>
           </tr>
 
           <tr>
             <td>AT 4</td>
             <td>Yard Planner</td>
             <td>AA 4</td>
-            <td>Menyusun yard plan</td>
-            <td>R8</td>
-            <td>Overstay / blocking</td>
-            <td>C14</td>
-            <td>Perkiraan dwell time salah</td>
-            <td>PM14</td>
-            <td>Dwell time prediction</td>
-          </tr>
-
-          <tr>
-            <td>AT 4</td>
-            <td>Yard Planner</td>
-            <td>AP 4</td>
-            <td>Verifikasi yard plan</td>
+            <td>
+              Menerbitkan Position Assignment/Stack Map final (inbound &
+              outbound)
+            </td>
             <td>R7</td>
-            <td>Kepadatan yard</td>
+            <td>
+              Penempatan/slotting yard tidak efisien jadi re-handle & alat
+              banyak jalan
+            </td>
+            <td>C12</td>
+            <td>
+              Data kontainer di TOS tidak lengkap/akurat
+              (size/type/berat/reefer/DG/hold) saat planning
+            </td>
+            <td>PM12</td>
+            <td>
+              Aktifkan rule-based validation (termasuk VGM SOLAS) & gunakan MIG
+              BAPLIE/MOVINS terbaru saat planning
+            </td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>
+              Menerbitkan Position Assignment/Stack Map final (inbound &
+              outbound)
+            </td>
+            <td>R7</td>
+            <td>
+              Penempatan/slotting yard tidak efisien jadi re-handle & alat
+              banyak jalan
+            </td>
+            <td>C13</td>
+            <td>
+              Inventori yard tidak real-time (slot di sistem ≠ kondisi
+              lapangan), sehingga slot rencana ternyata terisi/terblokir
+            </td>
+            <td>PM13</td>
+            <td>
+              Pasang RFID/QR-based yard tracking + mandatory move confirmation
+              agar inventory TOS selalu mutakhir
+            </td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>
+              Menerbitkan Position Assignment/Stack Map final (inbound &
+              outbound)
+            </td>
+            <td>R8</td>
+            <td>
+              Tidak sinkron dengan arus truk/gate → blok macet & truck
+              turnaround time naik
+            </td>
+            <td>C14</td>
+            <td>
+              Perubahan/ketidakpastian jadwal kedatangan truk (TAS/ETA) tidak
+              masuk ke perencanaan
+            </td>
+            <td>PM14</td>
+            <td>
+              Terapkan Terminal Booking System (TBS) terintegrasi TOS untuk
+              meratakan kedatangan & memperkecil waiting time
+            </td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>
+              Menerbitkan Position Assignment/Stack Map final (inbound &
+              outbound)
+            </td>
+            <td>R8</td>
+            <td>
+              Tidak sinkron dengan arus truk/gate → blok macet & truck
+              turnaround time naik
+            </td>
             <td>C15</td>
-            <td>Data block capacity salah</td>
+            <td>
+              Beban pengambilan ditumpuk di blok yang sama pada jam yang sama
+              (kapasitas gate/alat tidak diperhitungkan)
+            </td>
             <td>PM15</td>
-            <td>Auto-capacity check</td>
+            <td>
+              Load-balancing per blok & time-window lewat aturan TAS/yard
+              (kapasitas gate & alat sebagai constraint)
+            </td>
           </tr>
 
           <tr>
             <td>AT 4</td>
             <td>Yard Planner</td>
             <td>AP 4</td>
-            <td>Verifikasi yard plan</td>
+            <td>
+              Validasi Open Stack dan Analisa YOR (kepadatan) termasuk
+              prediksinya
+            </td>
             <td>R8</td>
-            <td>Blocking</td>
+            <td>
+              YOR terlalu tinggi (yard “terlalu penuh”) → kemacetan & banyak
+              re-handle
+            </td>
             <td>C16</td>
-            <td>Barang prioritas bercampur</td>
+            <td>
+              Produktivitas yard turun: breakdown alat/kurang operator sehingga
+              backlog menumpuk
+            </td>
             <td>PM16</td>
-            <td>Priority slot rules</td>
+            <td>
+              Siapkan standby plan operator & unit cadangan untuk hot-swap saat
+              downtime
+            </td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AP 4</td>
+            <td>
+              Validasi Open Stack dan Analisa YOR (kepadatan) termasuk
+              prediksinya
+            </td>
+            <td>R8</td>
+            <td>
+              YOR terlalu tinggi (yard “terlalu penuh”) → kemacetan & banyak
+              re-handle
+            </td>
+            <td>C17</td>
+            <td>
+              Area efektif berkurang: blok ditutup (maintenance/No-Work Area)
+              atau dibatasi (zona reefer/DG) sehingga kepadatan naik
+            </td>
+            <td>PM17</td>
+            <td>
+              Aktifkan blok alternatif/overflow sementara & lakukan dynamic
+              zoning untuk rebalance kepadatan
+            </td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AP 4</td>
+            <td>
+              Validasi Open Stack dan Analisa YOR (kepadatan) termasuk
+              prediksinya
+            </td>
+            <td>R8</td>
+            <td>
+              YOR terlalu tinggi (yard “terlalu penuh”) → kemacetan & banyak
+              re-handle
+            </td>
+            <td>C18</td>
+            <td>
+              Kebijakan stacking kurang tepat: tinggi tumpukan/slotting campur
+              (import-export-empty) menambah re-handle dan memperlambat
+              pengosongan blok
+            </td>
+            <td>PM18</td>
+            <td>
+              Kunci yard policy di TOS (tinggi tumpuk & blok khusus
+              import/export/empty) dengan rule-based slotting
+            </td>
           </tr>
         </tbody>
       </table>
