--- a/aktivitas5.html
+++ b/aktivitas5.html
@@ -548,66 +548,119 @@
             <td>AT 5</td>
             <td>Ship Talker</td>
             <td>AA 5</td>
-            <td>Koordinasi operasional kapal</td>
+            <td>
+              Mengeluarkan instruksi mulai kerja sisi kapal (sesuai rencana di
+              CWP/Bay Plan)
+            </td>
             <td>R9</td>
-            <td>Miss-communication</td>
-            <td>C17</td>
-            <td>Informasi tidak standar</td>
-            <td>PM17</td>
-            <td>Standard message template</td>
+            <td>Instruksi/komunikasi tidak jelas (radio/isyarat tangan)</td>
+            <td>C16</td>
+            <td>
+              Kualitas radio buruk/crosstalk atau noise sehingga pesan
+              terpotong/tertukar
+            </td>
+            <td>PM16</td>
+            <td>
+              Audit & peremajaan radio, kanal khusus operasi, dan fallback ke
+              hand-signals standar bila audio tidak andal
+            </td>
           </tr>
 
           <tr>
             <td>AT 5</td>
             <td>Ship Talker</td>
             <td>AA 5</td>
-            <td>Koordinasi operasional kapal</td>
+            <td>
+              Mengeluarkan instruksi mulai kerja sisi kapal (sesuai rencana di
+              CWP/Bay Plan)
+            </td>
             <td>R10</td>
-            <td>Keterlambatan instruksi</td>
-            <td>C18</td>
-            <td>Response time lambat</td>
-            <td>PM18</td>
-            <td>Auto-notification system</td>
+            <td>Tidak sinkron dengan CWP/Bay Plan terbaru (versi salah)</td>
+            <td>C17</td>
+            <td>
+              Rencana terbaru tidak dipublikasikan ke semua pihak/perangkat
+              (pakai file lama)
+            </td>
+            <td>PM17</td>
+            <td>
+              Terapkan PCS/TOS sebagai “single source of truth” + kontrol versi
+              & notifikasi otomatis saat ada revisi rencana
+            </td>
           </tr>
 
           <tr>
             <td>AT 5</td>
             <td>Ship Talker</td>
             <td>AP 5</td>
-            <td>Verifikasi instruksi kapal</td>
+            <td>
+              Validasi perangkat & dokumen kerja sebelum mulai (device &
+              validasi tools kerja; CWP/PA/Radio)
+            </td>
             <td>R9</td>
-            <td>Instruksi tidak jelas</td>
+            <td>
+              Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak
+              cukup unit)
+            </td>
             <td>C19</td>
-            <td>Laporan manual rawan salah</td>
+            <td>
+              Gangguan cakupan & kebisingan: dead spot di area kerja,
+              headset/noise-cancelling tidak digunakan
+            </td>
             <td>PM19</td>
-            <td>Digital reporting form</td>
+            <td>
+              Petakan cakupan & pasang repeater di area dead spot, sekaligus
+              wajib headset untuk semua peran kritis
+            </td>
           </tr>
 
           <tr>
             <td>AT 5</td>
             <td>Ship Talker</td>
             <td>AP 5</td>
-            <td>Verifikasi instruksi kapal</td>
+            <td>
+              Validasi perangkat & dokumen kerja sebelum mulai (device &
+              validasi tools kerja; CWP/PA/Radio)
+            </td>
             <td>R10</td>
-            <td>Keterlambatan info</td>
+            <td>
+              Rencana kerja yang dibagikan tidak tepat/versinya salah (CWP/PA
+              kadaluarsa) → interferensi crane & waktu tunggu
+            </td>
             <td>C20</td>
-            <
-            <td>Kapal tidak update status</td>
+            <td>
+              Perubahan rencana last-minute tidak tersosialisasi (tidak ada
+              cut-off & change control yang jelas)
+            </td>
             <td>PM20</td>
-            <td>Mandatory status update</td>
+            <td>
+              Terapkan cut-off & change control terpusat di TOS; revisi hanya
+              lewat tiket yang otomatis broadcast
+            </td>
           </tr>
 
           <tr>
             <td>AT 5</td>
             <td>Ship Talker</td>
             <td>AP 5</td>
-            <td>Verifikasi instruksi kapal</td>
+            <td>
+              Validasi perangkat & dokumen kerja sebelum mulai (device &
+              validasi tools kerja; CWP/PA/Radio)
+            </td>
             <td>R10</td>
-            <td>Keterlambatan info</td>
+            <td>
+              Rencana kerja yang dibagikan tidak tepat/versinya salah (CWP/PA
+              kadaluarsa) → interferensi crane & waktu tunggu
+            </td>
             <td>C21</td>
-            <td>Perbedaan format pelaporan</td>
+            <td>
+              Distribusi rencana manual (print/WA) tanpa kontrol
+              versi/timestamp, sehingga tim memakai versi berbeda
+            </td>
             <td>PM21</td>
-            <td>Standardized code & terminology</td>
+            <td>
+              Gunakan satu sumber (TOS) dengan timestamp; bagikan tautan versi
+              live, bukan file cetak/WA
+            </td>
           </tr>
         </tbody>
       </table>
