--- a/aktivitas4.html
+++ b/aktivitas4.html
@@ -581,7 +581,7 @@
             <th>AT Code</th>
             <th>Aktivitas Terminal</th>
             <th>AA/AP Code</th>
-            <th>Aktivitas Admin/Pemeriksaan</th>
+            <th>Aktivitas Administrasi/Pemeriksaan</th>
             <th>Risk Code</th>
             <th>Risk</th>
             <th>Cause Code</th>
