--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -673,7 +673,7 @@
             <th>AT Code</th>
             <th>Aktivitas Terminal</th>
             <th>AA/AP Code</th>
-            <th>Aktivitas Admin/Pemeriksaan</th>
+            <th>Aktivitas Administrasi/Pemeriksaan</th>
             <th>Risk Code</th>
             <th>Risk</th>
             <th>Cause Code</th>
